Chaging brand theme to some cute green

--- a/src/stylesheet/config/colors.less
+++ b/src/stylesheet/config/colors.less
@@ -7,6 +7,7 @@
 
 @brand-primary:         #CD131C;
 //@brand-primary:         #78467B;
+@brand-primary:         #1abc9c;
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
