--- a/src/html/includes/layout/footer.html
+++ b/src/html/includes/layout/footer.html
@@ -12,3 +12,22 @@
         </div>
     </div>
 </footer>
+
+<!-- UserVoice JavaScript SDK (only needed once on a page) -->
+<script>(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/QtBMAq0IgHn2Xs6VASRdw.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})()</script>
+
+<!-- A tab to launch the Classic Widget -->
+<script>
+UserVoice = window.UserVoice || [];
+UserVoice.push(['showTab', 'classic_widget', {
+  mode: 'support',
+  primary_color: '#1abc9c',
+  link_color: '#007dbf',
+  support_tab_name: 'Contact us',
+  feedback_tab_name: 'Give your feedbacks',
+  tab_label: 'Feedback & Support',
+  tab_color: '#1abc9c',
+  tab_position: 'middle-right',
+  tab_inverted: true
+}]);
+</script>
