Wording changes: editions become sessions

--- a/src/stylesheet/stylesheet.less
+++ b/src/stylesheet/stylesheet.less
@@ -55,5 +55,5 @@ a{
 @import 'sections/home.less';
 @import 'sections/idea.less';
 @import 'sections/concept.less';
-@import 'sections/editions.less';
+@import 'sections/sessions.less';
 @import 'sections/contact.less';
