--- a/src/html/includes/layout/navbar.html
+++ b/src/html/includes/layout/navbar.html
@@ -14,7 +14,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#idea" title="The idea of Welean projects" class="tooltip">The idea</a></li>
                 <li><a href="#concept" title="How works Welean ?" class="tooltip">Concept</a></li>
-                <li><a href="#editions" title="What has been done on previous Welean editions" class="tooltip">Editions</a></li>
+                <li><a href="#sessions" title="What has been done on previous Welean sessions" class="tooltip">Sessions</a></li>
                 <li><a href="#contact" class="tooltip" title="Get in touch with the Welean team!">Contact</a></li>
                 @@include('includes/socials.html')
             </ul>
