Add links in nav and content to the blog

--- a/src/html/includes/layout/navbar.html
+++ b/src/html/includes/layout/navbar.html
@@ -11,10 +11,10 @@
         </div>
         <div class="collapse navbar-collapse" id="js-main-menu">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#home">Home</a></li>
                 <li><a href="#idea" title="The idea of Welean projects" class="tooltip">The idea</a></li>
                 <li><a href="#concept" title="How works Welean ?" class="tooltip">Concept</a></li>
                 <li><a href="#sessions" title="What has been done on previous Welean sessions" class="tooltip">Sessions</a></li>
+                <li><a href="/blog/" title="See feedback, idea, and what will happen next!" class="tooltip">Blog</a></li>
                 <li><a href="#contact" class="tooltip" title="Get in touch with the Welean team!">Contact</a></li>
                 @@include('includes/socials.html')
             </ul>
