--- a/src/html/includes/sections/concept.html
+++ b/src/html/includes/sections/concept.html
@@ -20,6 +20,7 @@
                 <p>
                     Once done, the products are shared with everybody: most of the time, we provide a demo website, and we always release the source code under an open source licence.
                 </p>
+                <p><a href="http://welean.it/blog/topics/concept/" class="btn btn-primary">Read more about the concept</a></p>
             </div>
         </div>
     </div>
