Google webmaster tools tag

--- a/src/html/includes/htmlhead.html
+++ b/src/html/includes/htmlhead.html
@@ -9,6 +9,9 @@
     <title>@@applicationName</title>
     <meta name="description" content="@@description">
 
+    <!-- google webmaster tools -->
+    <meta name="google-site-verification" content="U2dKYv_77xNBnpJ66mDd_OZxZNfGo_z2QtaqX3um_3s" />
+
     <!-- authoring -->
     <meta name="copyright" content="@@copyrightYear">
     <meta name="twitter:card" content="summary" />
