CHange email contact to blog form conbtact

--- a/src/html/includes/sections/contact.html
+++ b/src/html/includes/sections/contact.html
@@ -13,7 +13,7 @@
                 <p>Feel free to contact us if you have <strong>project ideas</strong>, wanna <strong>join</strong> us or give us <strong>feedbacks</strong> of similar experiments.</p>
                 <p>We would be happing hearing from you, answering any question, having a coffee together. Or simply hearing from you.</p>
                 <p>
-                    <a href="maito:tilap@evaneos.com" class="btn btn-primary">Send us a mail</a>
+                    <a href="http://welean.it/blog/contact/" class="btn btn-primary">Send us a mail</a>
                 </p>
             </div>
         </div>
