--- a/src/stylesheet/sections/home.less
+++ b/src/stylesheet/sections/home.less
@@ -2,7 +2,7 @@
     position:relative;
     background:#000;
     color:@text-color-inverse;
-    background:url(/assets/bg-home.jpg);
+    background:url(/assets/bg-home-2.jpg);
     .background-size(cover);
     z-index:0;
     .overlay {
@@ -14,7 +14,7 @@
         right:0;
         bottom:0;
         left:0;
-        background:url(/assets/overlay.png);
+        //background:url(/assets/overlay.png);
     }
     h1{
         text-transform: uppercase;
