--- a/src/html/includes/sections/home.html
+++ b/src/html/includes/sections/home.html
@@ -8,7 +8,7 @@
                 <div class="info">by <a href="http://www.evaneos.com/" title="Evaneos.com">Evaneos.com</a></div>
             </div>
             <div class="col-md-4 introduction">
-                <p>Next session on November 6<sup>th</sup>, 2015!</p>
+                <p>Next session not planned yet.</p> 
                 <p>Follow us on <a href="http://twitter.com/weleanit/">twitter</a> to stay tuned.</p>
             </div>
         </div>
